--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,8 +42,8 @@
     <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
       <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
       <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Quiz</a>
-      <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>LeaderBoard</a>
-      <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Rules</a>
+      <a [routerLink]="['leaderboard']" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>LeaderBoard</a>
+      <a [routerLink]="['rules']" class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Rules</a>
       <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>About Us</a>
       <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Contact Us</a>
       <!--<a class="mdl-navigation__link" href=""><i class="mdl-color-text&#45;&#45;blue-grey-400 material-icons" role="presentation">local_offer</i>Log Out</a>-->
@@ -73,7 +73,9 @@
           <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan dy="-0.07" font-size="0.2">%</tspan></text>
         </svg>
       </div>
-      <div class="demo-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
+      <router-outlet></router-outlet>
+      <!--
+      <div class="demo-graphs mdl-shadow&#45;&#45;2dp mdl-color&#45;&#45;white mdl-cell mdl-cell&#45;&#45;8-col">
         <svg fill="currentColor" viewBox="0 0 500 250" class="demo-graph">
           <use xlink:href="#chart" />
         </svg>
@@ -81,21 +83,21 @@
           <use xlink:href="#chart" />
         </svg>
       </div>
-      <div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
-        <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
-          <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+      <div class="demo-cards mdl-cell mdl-cell&#45;&#45;4-col mdl-cell&#45;&#45;8-col-tablet mdl-grid mdl-grid&#45;&#45;no-spacing">
+        <div class="demo-updates mdl-card mdl-shadow&#45;&#45;2dp mdl-cell mdl-cell&#45;&#45;4-col mdl-cell&#45;&#45;4-col-tablet mdl-cell&#45;&#45;12-col-desktop">
+          <div class="mdl-card__title mdl-card&#45;&#45;expand mdl-color&#45;&#45;teal-300">
             <h2 class="mdl-card__title-text">Updates</h2>
           </div>
-          <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+          <div class="mdl-card__supporting-text mdl-color-text&#45;&#45;grey-600">
             Non dolore elit adipisicing ea reprehenderit consectetur culpa.
           </div>
-          <div class="mdl-card__actions mdl-card--border">
+          <div class="mdl-card__actions mdl-card&#45;&#45;border">
             <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">Read More</a>
           </div>
         </div>
-        <div class="demo-separator mdl-cell--1-col"></div>
-        <div class="demo-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
-          <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50">
+        <div class="demo-separator mdl-cell&#45;&#45;1-col"></div>
+        <div class="demo-options mdl-card mdl-color&#45;&#45;deep-purple-500 mdl-shadow&#45;&#45;2dp mdl-cell mdl-cell&#45;&#45;4-col mdl-cell&#45;&#45;3-col-tablet mdl-cell&#45;&#45;12-col-desktop">
+          <div class="mdl-card__supporting-text mdl-color-text&#45;&#45;blue-grey-50">
             <h3>View options</h3>
             <ul>
               <li>
@@ -124,13 +126,14 @@
               </li>
             </ul>
           </div>
-          <div class="mdl-card__actions mdl-card--border">
-            <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--blue-grey-50">Change location</a>
+          <div class="mdl-card__actions mdl-card&#45;&#45;border">
+            <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text&#45;&#45;blue-grey-50">Change location</a>
             <div class="mdl-layout-spacer"></div>
             <i class="material-icons">location_on</i>
           </div>
         </div>
       </div>
+    -->
     </div>
   </main>
 </div>
